
[package]
authors = [""]
edition = "2021"
name    = "suiangria"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name       = "suiangria"
path       = "src/rust/src/lib.rs"

[dependencies]
napi        = { version = "3.0.0", features = ["async"] }
napi-derive = "3.0.0"
tokio       = { version = "1", features = ["full"] }

move-binary-format  = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
move-bytecode-utils = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
move-core-types     = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
move-stdlib         = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
move-vm-runtime     = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
move-vm-types       = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }

sui-adapter-latest = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
sui-execution      = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
sui-framework      = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
sui-types          = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }

anyhow     = "1.0"
base64     = "0.21"
bcs        = "0.1"
flate2     = { version = "1.1.2" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
