
[package]
authors = ["RedStone Team <dev@redstone.finance>"]
edition = "2021"
name    = "suiangria"
version = "0.1.0"

metadata.cargo-machete = { ignored = ["napi-build"] }

[lib]
crate-type = ["cdylib"]
name       = "suiangria"
path       = "src/rust/src/lib.rs"

[dependencies]
napi        = { version = "3.0.0", features = ["async"] }
napi-derive = "3.0.0"

move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "dcd0abda" }
move-core-types    = { git = "https://github.com/MystenLabs/sui.git", rev = "dcd0abda" }
sui-execution      = { git = "https://github.com/MystenLabs/sui.git", rev = "dcd0abda" }
sui-framework      = { git = "https://github.com/MystenLabs/sui.git", rev = "dcd0abda" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui.git", rev = "dcd0abda" }
sui-types          = { git = "https://github.com/MystenLabs/sui.git", rev = "dcd0abda" }

anyhow     = "1.0"
base64     = "0.21"
bcs        = "0.1"
flate2     = { version = "1.1.2" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
